# anki-typst

./: .gitignore  README.md  local_install.sh
cli/: Cargo.toml  install.sh
cli/src/: api.rs  config.rs  interface.rs  main.rs  metadata.rs
cli/src/api/: types.rs
examples/: more.typ  simple.typ  test.typ
src/: anki_old.typ  config.typ  lib.typ  raw.typ  theorems.typ  utils.typ
typst/: install.py  typst.toml
typst/doc/: doc.typ  example1.typ  example2.typ
typst/examples/: more.typ  secondary.typ  simple.typ
typst/src/: config.typ  lib.typ  raw.typ  theorems.typ  utils.typ
typst/tests/: .gitignore
typst/tests/examples/more/: test.typ
typst/tests/examples/secondary/: test.typ
typst/tests/examples/simple/: test.typ
